@@ -1,3 +1,8 @@
+2011-01-11  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* proto-stream.el (open-protocol-stream): Protect against the low-level
+	transport functions returning nil.
+
 2011-01-07  Daiki Ueno  <ueno@unixuser.org>
 
 	* mml2015.el (epg-sub-key-fingerprint): Autoload.
